@@ -14,10 +14,7 @@ import ru.otus.hw.models.Genre;
 import java.sql.PreparedStatement;
 import java.sql.ResultSet;
 import java.sql.SQLException;
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
+import java.util.*;
 
 @Repository
 @RequiredArgsConstructor
@@ -130,8 +127,7 @@ public class BookRepositoryJdbc implements BookRepository {
                             }).toList();
                     booksWithoutGenre.setGenres(bookGenres);
                     return booksWithoutGenre;
-                })
-               .collect(Collectors.toList());
+                }).toList();
     }
 
     private Book insert(Book book) {
